enhance generation of scripts (jaco/dior/etc.)