@@ -22,15 +22,8 @@
    <!--                   IDL compiler                       -->
    <!-- ==================================================== -->
 
-   <target name="compiler" depends="init,idlsrc,idllib,idlcmd"/>
+   <target name="compiler" depends="init,idlsrc,idllib"/>
 
-   <target name="idlcmd">
-      <copy overwrite="yes" file="bin/idltemplate" tofile="bin/idl" />
-      <copy overwrite="yes" file="bin/idltemplate.bat" tofile="bin/idl.bat" />
-      <replace file="bin/idl" token="@@@" value="${basedir}"/>
-      <replace file="bin/idl.bat" token="@@@" value="${basedir}"/>
-      <chmod file="bin/idl" perm="ugo+rx"/>
-   </target>
 
    <!-- package idl.jar -->
    <target name="idllib" depends="idlsrc" >
@@ -82,62 +75,20 @@
    </target>
 
    <target name="jaco" depends="init">
-      <!-- Use the java.endorsed.dirs mechanism to replace the SDK CORBA classes with those in jacorb.jar for SDK 1.4 -->
-
-      <path id="cp.raw" >
-         <pathelement location="${basedir}/lib/jacorb.jar" />
-         <pathelement location="${basedir}/lib/logkit-1.2.jar" />
-         <pathelement location="${basedir}/lib/avalon-framework-4.1.5.jar" />
-      </path>
-
-      <pathconvert targetos="unix" property="cp.unix" refid="cp.raw" >
-         <map from="${basedir}" to="${JACORB_HOME}" />
-      </pathconvert>
-
-      <pathconvert targetos="windows" property="cp.windows" refid="cp.raw" >
-      </pathconvert>
-
-      <condition property="jaco.classpath" value="-Djava.endorsed.dirs=${JACORB_HOME}/lib -classpath ${cp.unix}:${CLASSPATH}">
-         <equals arg1="${ant.java.version}" arg2="1.4"/>
-      </condition>
-
-      <condition property="jacobat.classpath" value="-Djava.endorsed.dirs=&quot;${basedir}\lib&quot; -classpath &quot;${cp.windows};%CLASSPATH%&quot;">
-         <equals arg1="${ant.java.version}" arg2="1.4"/>
-      </condition>
-
-      <!-- ... else use -Xbootclasspath for older SDKs -->
-      <property name="jaco.classpath" value="-Xbootclasspath/p:${cp.unix}:${JRE_HOME}/lib/rt.jar:${CLASSPATH}"/>
-      <property name="jacobat.classpath" value="-Xbootclasspath/p:&quot;${cp.windows};${java.home}\lib\rt.jar;%CLASSPATH%&quot;"/>
-
-       <copy overwrite="yes" file="bin/jacotemplate.bat" tofile="bin/jaco.bat" />
-
-      <copy overwrite="yes"
-            file="bin/ntfy-wrapper.template"
-            tofile="bin/ntfy-wrapper" />
-
-      <replace file="bin/ntfy-wrapper"
-               token="@@@JACORB_HOME@@@"
-               value="${basedir}" />
-
-      <copy overwrite="yes"
-            file="bin/ns-wrapper.template"
-            tofile="bin/ns-wrapper" />
-
-      <replace file="bin/ns-wrapper"
-               token="@@@JACORB_HOME@@@"
-               value="${basedir}" />
-
-
-      <replace file="bin/jaco.bat" token="@@@CLASSPATH@@@"
-               value="${jacobat.classpath}"/>
-      <replace file="bin/jaco.bat" token="@@@JACORB_HOME@@@"
-               value="${basedir}" />
 
         <loadfile   srcFile="bin/resolve_jacorb_home.tok"
                     property="token.resolve-jacorb-home"
                     failonerror="true"/>
 
-        <copy todir="bin">
+        <loadfile   srcFile="bin/resolve_jaco_cmd.tok"
+                    property="token.resolve-jaco-cmd"
+                    failonerror="true"/>
+
+        <loadfile   srcFile="bin/resolve_java_cmd.tok"
+                    property="token.resolve-java-cmd"
+                    failonerror="true"/>
+
+        <copy todir="bin" overwrite="true">
             <fileset dir="bin">
                 <include name="*.tpl"/>
             </fileset>
@@ -145,13 +96,18 @@
             <globmapper from="*.tpl" to="*"/>
 
             <filterset>
-                <filter token="RESOLVE_JACORB_HOME" value="${token.resolve-jacorb-home}"/>
-            </filterset>
-
-            <filterset begintoken="@@@" endtoken="@@@">
-                <filter token="JACORB_HOME" value="${basedir}" />
-                <filter token="JRE_HOME" value="${java.home}" />
-                <filter token="CLASSPATH" value="${jaco.classpath}" />
+                <filter token="RESOLVE_JACORB_HOME"
+                        value="${token.resolve-jacorb-home}" />
+                <filter token="RESOLVE_JAVA_CMD"
+                        value="${token.resolve-java-cmd}" />
+                <filter token="RESOLVE_JACO_CMD"
+                        value="${token.resolve-jaco-cmd}" />
+                <filter token="JACORB_HOME"
+                        value="${basedir}" />
+                <filter token="JAVA_CMD"
+                        value="java" />
+                <filter token="DONT_EDIT"
+                        value="don't edit this file. edit the template instead" />
             </filterset>
         </copy>
 
